--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
   <app-root></app-root>
   <h1>Hello Every one</h1>
   <p>Welcome to Git Collaboration</p>
+  <p>make changes accordingly</p>
 </body>
 </html>
